gcp/Kubernetes/two_service_ingress/nginx1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-one
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx-one
  template:
    metadata:
      labels:
        app: nginx-one
    spec:
      containers:
      - name: nginx
        image: nginx
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-one-svc
spec:
  selector:
    app: nginx-one
  ports:
  - port: 80
    targetPort: 80
